--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
 # node.js
 #
 node_modules/
-npm-debug.log
+#npm-debug.log
 yarn-error.log
-.expo/
-.expo/settings.json
+#.expo/
+#.expo/settings.json
+
+node_modules/**/*
+.expo/*
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+web-report/
+
+# macOS
+.DS_Store
