--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "name": "expo-tinder",
-    "slug": "expo-tinder",
+    "name": "Quecu",
+    "slug": "Quecu",
     "privacy": "public",
     "sdkVersion": "35.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
