--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@expo/vector-icons": "^10.0.0",
     "expo": "^33.0.0",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-deck-swiper": "1.5.25",
     "react-native-elements": "^1.1.0",
-    "react-navigation": "^3.0.9"
+    "react-native-gesture-handler": "1.3.0",
+    "react-native-paper": "^3.0.0",
+    "react-native-status-bar-height": "^2.4.0",
+    "react-native-web": "^0.11.7",
+    "react-navigation": "^3.0.9",
+    "react-navigation-stack": "^1.10.2"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^32.0.0"
+    "jest-expo": "^32.0.0",
+    "prettier": "^1.18.2"
   },
   "private": true
 }
