--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@expo/samples": "2.1.1",
     "@expo/vector-icons": "^10.0.0",
     "expo": "^33.0.0",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-deck-swiper": "1.5.25",
